--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="email">noah@santschi-cooney.ch</string>
     <string name="action_settings">Settings</string>
+    <string name="view_browser">View in Browser!</string>
+    <string name="compare">Add to Compare</string>
+    <string name="rank">Rank</string>
 </resources>
