--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="view_browser">View in Browser!</string>
     <string name="compare">Add to Compare</string>
     <string name="rank">Rank</string>
+    <string name="effective">Eff. Speed</string>
 </resources>
